# AbletonFullControlMCP

./: .gitignore  .mcp.json  .mcp.json.bak.20260508-091049  .mcp.json.bak.20260508-103110  .mcp.json.bak.20260508-144104  NOTICE.md  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE.md  CLAUDE_CODE.md  CLAUDE_DESKTOP.md  CURSOR.md  LIVE_API_GOTCHAS.md  MIX_AWARE_SHAPING.md  MIX_AWARE_SHAPING_SMOKE_TEST.md  SONG_STRUCTURE.md  SOUND_DESIGN_KNOWLEDGE.md  TOOLS.md  TROUBLESHOOTING.md
examples/: jrock_composition.py  live_set_introspection.py  programmatic_drum_pattern.py  walkthrough_first_session.md
jrock-test-1/test1 Project/: test1.als
jrock-test-1/test1 Project/Backup/: test1 [2026-05-08 142822].als
jrock-test-1/test1 Project/Samples/Recorded/: Master Bounce [bounce-temp] 0001 [2026-05-08 132640].wav.asd  Master Bounce [bounce-temp] 0001 [2026-05-08 132851].wav.asd  Master Bounce [bounce-temp] 0001 [2026-05-08 133002].wav.asd  Stem Bass [bounce-temp] 0001 [2026-05-08 133000].wav.asd  Stem Drums [bounce-temp] 0001 [2026-05-08 132959].wav.asd  Stem Lead Guitar [bounce-temp] 0001 [2026-05-08 133001].wav.asd  Stem Piano [bounce-temp] 0001 [2026-05-08 133001].wav.asd  Stem Rhythm Guitar [bounce-temp] 0001 [2026-05-08 133000].wav.asd
live_max_for_live/AbletonFullControlTape/: AbletonFullControlTape.maxpat  PROTOCOL.md  README.md
live_remote_script/AbletonFullControlBridge/: README.md  __init__.py  bridge_server.py
live_remote_script/AbletonFullControlBridge/handlers/: __init__.py  browser.py  clips.py  project.py  tracks.py
src/ableton_mcp/: __init__.py  __main__.py  bridge_client.py  config.py  live_version.py  mix_analysis.py  mix_apply.py  mix_descriptors.py  mix_knowledge.py  mix_masking.py  mix_propose.py  mix_verify.py  osc_client.py  section.py  server.py  state_diff.py
src/ableton_mcp/bounce/: __init__.py  freeze.py  mix.py  mp3.py  resampling.py  tape_orchestrator.py
src/ableton_mcp/device_schemas/: __init__.py  audio_effects.py  base.py  instruments.py  midi_effects.py  utilities.py
src/ableton_mcp/generators/: __init__.py  base.py  musicgen.py  registry.py  stable_audio.py  suno.py
src/ableton_mcp/inventory/: __init__.py  loader.py  manifest.py  matcher.py  scanner.py
src/ableton_mcp/knowledge/: __init__.py  crawler.py  indexer.py  search.py
src/ableton_mcp/presets/: __init__.py  applier.py  clusterer.py  library.py  storage.py
src/ableton_mcp/scripts/: build_knowledge_index.py  build_semantics_reference.py  generate_tools_doc.py  install_abletonosc.py  install_bridge.py  install_clients.py  install_tape.py  probe_orchestrator.py  smoke_test.py
src/ableton_mcp/semantics/: __init__.py  describer.py  reference_distributions.py  transforms.py  vocabulary.py
src/ableton_mcp/shaping/: __init__.py  applier.py  fallback_vocab.py  parser.py  planner.py
src/ableton_mcp/song_flow/: __init__.py  analyze.py  import_to_live.py  key.py  load_to_arrangement.py  transpose.py  variations.py
src/ableton_mcp/sound/: __init__.py  dataset.py  features.py  matcher.py  planner.py  renderer.py  synth_stub.py
src/ableton_mcp/sound_design/: __init__.py  applier.py  device_rules.py  introspect.py
src/ableton_mcp/stems/: __init__.py  demucs.py
src/ableton_mcp/structure/: __init__.py  live_bridge.py  model.py  operations.py  parser.py
src/ableton_mcp/synth_bench/: __init__.py  additive.py  base.py  fm_2op.py  fm_4op.py  fx_chain.py  granular.py  subtractive.py  wavetable.py
src/ableton_mcp/tape/: __init__.py  client.py  config.py  loopback.py
src/ableton_mcp/tools/: arrangement.py  audio_analysis.py  bench.py  bounce.py  browser.py  clip_slots.py  clips.py  cue_points.py  device_schemas.py  devices.py  high_level.py  inventory.py  knowledge.py  listeners.py  midi_files.py  midi_mapping.py  mix.py  presets.py  project.py  render.py  routing.py  scenes.py  semantics.py  song_flow.py  sound_design.py  sound_modeling.py  sound_shaping.py  structure.py  suno.py  tape.py  tracks.py  transport.py  view.py
tests/: test_arrangement_editing.py  test_bounce_freeze.py  test_bounce_progress_cancellation.py  test_bounce_region.py  test_bounce_region_all_active.py  test_bounce_resampling.py  test_bridge_client.py  test_bridge_version_handshake.py  test_device_schemas.py  test_dry_run_destructive_ops.py  test_generators.py  test_high_level_ops.py  test_inventory.py  test_knowledge.py  test_live_renderer.py  test_live_version.py  test_mix_analysis.py  test_mix_apply.py  test_mix_descriptors.py  test_mix_knowledge.py  test_mix_masking.py  test_mix_propose.py  test_mix_tools.py  test_mix_verify.py  test_osc_client.py  test_osc_correlation.py  test_presets.py  test_project_describe.py  test_section_detection.py  test_semantics.py  test_server_registers.py  test_song_flow.py  test_sound_design.py  test_sound_modeling.py  test_sound_shaping.py  test_state_diff.py  test_structure.py  test_synth_bench.py  test_tape_client.py  test_track_clips_parsers.py
